--- a/Assets/Resources/Localization/strings-de.txt
+++ b/Assets/Resources/Localization/strings-de.txt
@@ -4,6 +4,12 @@
 	ok:					"OK",
 	
 	continue:			"Weiter",
+
+	cancel:				"Abbrechen",
+
+	accept:				"Akzeptieren",
+
+	decline:			"Ablehnen",
 	
 	default_name:		"Nutzername",
 
@@ -32,6 +38,18 @@ water:"Wasser",
 farm_rsc_text:
 "{0} {1} vom Typ {2} gefunden.",
 
+challenger_title:
+"Warte auf Antwort...",
+
+challenger_text:
+"Sie fordern {0} heraus",
+
+challenge_title:
+"Sie werden herausgefordert!",
+
+challenge_text:
+"{0} fordert Sie zu einem Kampf heraus."
+
 screen_entername_title:
 "Ihr Profil",
 
@@ -48,7 +66,7 @@ screen_monsterentername_title:
 "Ihr Specter",
 
 screen_monsterentername_text:
-"Bitte wählen Sie eine Namen fuer ihrne Specter.",
+"Bitte wählen Sie einen Namen für ihren Specter.",
 
 iris_01_text: 	
 "Willkommen Agent,
