--- a/Assets/Resources/Localization/strings-de.txt
+++ b/Assets/Resources/Localization/strings-de.txt
@@ -1,5 +1,5 @@
-{
-	blindtext: 			"Das ist ein Blindtext. Sollte Sie das lesen können, verständigen Sie bitte einen der Entwickler. Wenn nicht, wird es tote Pestratten regnen.",
+ï»¿{
+	blindtext: 			"Das ist ein Blindtext. Sollte Sie das lesen kÃ¶nnen, verstÃ¤ndigen Sie bitte einen der Entwickler. Wenn nicht, wird es tote Pestratten regnen.",
 	
 	ok:					"OK",
 	
@@ -52,70 +52,84 @@ screen_entername_title:
 "Ihr Profil",
 
 screen_entername_text:
-"Bitte wählen Sie einen Nutzernamen. Dieser wird auch anderen VENGEA Agents angezeigt.",
+"Bitte wÃ¤hlen Sie einen Nutzernamen. Dieser wird auch anderen VENGEA Agents angezeigt.",
 
 screen_chooseelement_title:
 "Element",
 
 screen_chooseelement_text:
-"Bitte wählen Sie das Element ihres Spectres.",
+"Bitte wÃ¤hlen Sie das Element ihres Spectres.",
 	
 screen_monsterentername_title:
 "Ihr Spectre",
 
 screen_monsterentername_text:
-"Bitte wählen Sie einen Namen für ihren Spectre.",
+"Bitte wÃ¤hlen Sie einen Namen fÃ¼r ihren Spectre.",
+
+menu_resources: "Ressourcen",
+
+menu_sound: "Sound",
+
+menu_firewall: "Firewall",
+
+menu_setbase: "Base setzen",
+
+menu_basecooldown: "(wieder in {0}h {1}min)",
+
+menu_reboot: "System Reboot",
+
+menu_logout: "Abmelden",
 
 iris_01_text: 	
 "Willkommen Agent,
-Sie sind kurz davor ein Teil von VENGEA zu werden. Ich bin I.R.I.S., die künstliche Intelligenz von VENGEA, und werde Sie auf Ihren Wegen begleiten.",
+Sie sind kurz davor ein Teil von VENGEA zu werden. Ich bin I.R.I.S., die kÃ¼nstliche Intelligenz von VENGEA, und werde Sie auf Ihren Wegen begleiten.",
 
 iris_02_01_text:
-"Um die Registrierung in unserem System abzuschließen, erstellen Sie sich bitte einen Nutzernamen. Dieser wird auch anderen VENGEA Agents angezeigt.",
+"Um die Registrierung in unserem System abzuschlieÃŸen, erstellen Sie sich bitte einen Nutzernamen. Dieser wird auch anderen VENGEA Agents angezeigt.",
 
 iris_02_02_text:
 "Vielen Dank. Die Registrierung wird abgeschlossen.",
 
 iris_03_text:
 "In der Mythologie wurden immer wieder Kreaturen beschrieben, denen man die  Naturgewalten zuschrieb. Die evidenzbasierte Physik stritt jahrelang die Existenz dieser Wesen ab. Doch nun ist es VENGEA gelungen sie durch OCULUS sichtbar zu machen. Wir nennen sie Spectres. 
-Unsere Forschungen haben zudem ergeben, dass sie für die moderne Netzwelt eine reale Bedrohung darstellen.
+Unsere Forschungen haben zudem ergeben, dass sie fÃ¼r die moderne Netzwelt eine reale Bedrohung darstellen.
 Ihre Aufgabe ist es, Spectres in Ihrer Umgebung ausfindig zu machen und auszuschalten.",
 
 iris_04_01_text:
-"Für den Kampf stellt VENGEA Ihnen einen bereits unter Kontrolle gebrachten Spectre zur Verfügung.",
+"FÃ¼r den Kampf stellt VENGEA Ihnen einen bereits unter Kontrolle gebrachten Spectre zur VerfÃ¼gung.",
 
 iris_04_02_text:
 "Treffen Sie Ihre Wahl!",
 
 iris_04_03_text:
-"Der Spectre wird an Sie übermittelt.",
+"Der Spectre wird an Sie Ã¼bermittelt.",
 
 iris_04_04_text:
-"Übermittlung abgeschlossen.",
+"Ãœbermittlung abgeschlossen.",
 
 iris_05_01_text:
 "Starte nun erste Trainingseinheit.",
 
 iris_05_02_text:
-"Führen Sie einen Angriff aus, indem Sie mit dem Finger von der Driode auf die gegnerische Kreatur wischen.",
+"FÃ¼hren Sie einen Angriff aus, indem Sie mit dem Finger von der Driode auf die gegnerische Kreatur wischen.",
 
 iris_05_03_text:
 "Sehr gut!
-Führen Sie nun den Kampf zu ende.",
+FÃ¼hren Sie nun den Kampf zu ende.",
 
 iris_05_04_text:
-"Ausgezeichnet. Für Ihren Erfolg erhalten Sie von VENGEA Prämien.
-Dies sind Bioden, eine primitive Ressource aus der Sphäre der Spectres. Mit Ihrer Hilfe können Sie Drioden schaffen, die Sie wiederum für die Kontrolle Ihres Spectres nutzen können.",
+"Ausgezeichnet. FÃ¼r Ihren Erfolg erhalten Sie von VENGEA PrÃ¤mien.
+Dies sind Bioden, eine primitive Ressource aus der SphÃ¤re der Spectres. Mit Ihrer Hilfe kÃ¶nnen Sie Drioden schaffen, die Sie wiederum fÃ¼r die Kontrolle Ihres Spectres nutzen kÃ¶nnen.",
 
 iris_06_01_text:
 "Sammeln Sie Bioden in Ihrer Umgebung!",
 
 iris_06_02_text:
-"Behalten Sie Ihre Umgebung immer gründlich im Auge.",
+"Behalten Sie Ihre Umgebung immer grÃ¼ndlich im Auge.",
 
 iris_06_03_text:
-"Für die erfolgreiche Arbeit benötigen Sie eine Basis. Dort können Sie Drioden herstellen,  Ihren Spectre regenerieren oder gebändigte Spectres an VENGEA senden.
-Legen Sie nun die Basis an Ihrer aktuellen Position fest. Öffnen Sie dazu das Menü.",
+"FÃ¼r die erfolgreiche Arbeit benÃ¶tigen Sie eine Basis. Dort kÃ¶nnen Sie Drioden herstellen,  Ihren Spectre regenerieren oder gebÃ¤ndigte Spectres an VENGEA senden.
+Legen Sie nun die Basis an Ihrer aktuellen Position fest. Ã–ffnen Sie dazu das MenÃ¼.",
 
 iris_06_04_text:
 "Sehr gut! Betreten Sie nun Ihre Basis.",
@@ -151,46 +165,46 @@ iris_06_14_text:
 "Tauschen Sie dazu 10 Sturm-Bioden in 5 Feuer-Bioden.",
 
 iris_06_15_text:
-"Sehr gut. Nun können Sie die Driode herstellen.",
+"Sehr gut. Nun kÃ¶nnen Sie die Driode herstellen.",
 
 iris_06_16_text:
 "Ausgezeichnet, Agent.",
 
 iris_06_17_text:
-"Bitte beachten Sie, dass sie den Ort der Basis nur einmal am Tag ändern können.",
+"Bitte beachten Sie, dass sie den Ort der Basis nur einmal am Tag Ã¤ndern kÃ¶nnen.",
 
 iris_07_01_text:
-"Platzieren Sie die Driode auf dem Spectre. Gehen Sie dafür in das Menü und wählen Sie Ihren Spectre aus.",
+"Platzieren Sie die Driode auf dem Spectre. Gehen Sie dafÃ¼r in das MenÃ¼ und wÃ¤hlen Sie Ihren Spectre aus.",
 
 iris_07_02_text:
 "Hervorragend. Erkunden Sie nun weiter Ihre Umgebung.",
 
 iris_08_01_text:
-"Ihr Spectre besitzt nun zwei Drioden. Wischen Sie mit dem Finger erst über die eine, dann über die andere und zum Abschluss auf den feindlichen Spectre und lassen Sie los.",
+"Ihr Spectre besitzt nun zwei Drioden. Wischen Sie mit dem Finger erst Ã¼ber die eine, dann Ã¼ber die andere und zum Abschluss auf den feindlichen Spectre und lassen Sie los.",
 
 iris_08_02_text:
 "Sehr gut. Probieren Sie es nun mit der umgekehrten Reihenfolge.",
 
 iris_08_03_text:
-"Ausgezeichnet. Sie können die erfolgreichen Angriffe jederzeit in der Information über Ihren Spectre nachschauen.",
+"Ausgezeichnet. Sie kÃ¶nnen die erfolgreichen Angriffe jederzeit in der Information Ã¼ber Ihren Spectre nachschauen.",
 
 iris_09_01_text:
-"Glückwunsch, Agent. Ihr Spectre ist eine Stufe aufgestiegen. Sie erhalten dafür eine Prämie.",
+"GlÃ¼ckwunsch, Agent. Ihr Spectre ist eine Stufe aufgestiegen. Sie erhalten dafÃ¼r eine PrÃ¤mie.",
 
 iris_09_02_text:
-"Bei jedem Stufenaufstieg können Sie entscheiden, ob Sie einen weiteren Drioden-Slot auf Ihrem Spectre freilegen wollen oder einen vorhanden Slot auf das Element der jeweils eingesetzten Driode prägen möchten. Dadurch werden die entsprechenden Element-Drioden in diesem Slot zusätzlich gestärkt.",
+"Bei jedem Stufenaufstieg kÃ¶nnen Sie entscheiden, ob Sie einen weiteren Drioden-Slot auf Ihrem Spectre freilegen wollen oder einen vorhanden Slot auf das Element der jeweils eingesetzten Driode prÃ¤gen mÃ¶chten. Dadurch werden die entsprechenden Element-Drioden in diesem Slot zusÃ¤tzlich gestÃ¤rkt.",
 
 iris_10_01_text:
-"Stellen Sie eine Driode der Stufe 1 her! Kombinieren Sie dafür 3 primitive Drioden.",
+"Stellen Sie eine Driode der Stufe 1 her! Kombinieren Sie dafÃ¼r 3 primitive Drioden.",
 
 iris_10_02_text:
-"Sehr gut! Sie können Drioden bis zur Stufe 5 herstellen.",
+"Sehr gut! Sie kÃ¶nnen Drioden bis zur Stufe 5 herstellen.",
 
 iris_11_01_text:
-"Achtung, wir konnten ein humanoides Störobjekt in Ihrer Umgebung lokalisieren. Sie können es zum Kampf herausfordern oder sich zurückziehen.",
+"Achtung, wir konnten ein humanoides StÃ¶robjekt in Ihrer Umgebung lokalisieren. Sie kÃ¶nnen es zum Kampf herausfordern oder sich zurÃ¼ckziehen.",
 
 iris_12_01_text:
-"Wir konnten einen VENGEA-Agenten in Ihrer Umgebung lokalisieren. Sie können mit Ihm Bioden und Drioden tauschen.",
+"Wir konnten einen VENGEA-Agenten in Ihrer Umgebung lokalisieren. Sie kÃ¶nnen mit Ihm Bioden und Drioden tauschen.",
 
 iris_13_01_text:
 "Achtung, eine Ihrer Drioden ist stark abgenutzt. Bitte tauschen Sie sie bei Gelegenheit aus.",
@@ -199,7 +213,7 @@ iris_14_01_text:
 "Gesammelte Daten werden mit VENGEA synchronisiert. Dieser Prozess ist sehr instabil, bitte brechen Sie den Vorgang nicht ab.",
 
 iris_15_01_text:
-"Sie nutzen gerade eine nicht autorisierte Version von OCULUS. Rebooten Sie Ihr System über das Menü neu, um Schadsoftware zu entfernen. Andernfalls bin ich gezwungen Sie dauerhaft als humanoides Störobjekt einzustufen.",
+"Sie nutzen gerade eine nicht autorisierte Version von OCULUS. Rebooten Sie Ihr System Ã¼ber das MenÃ¼ neu, um Schadsoftware zu entfernen. Andernfalls bin ich gezwungen Sie dauerhaft als humanoides StÃ¶robjekt einzustufen.",
 
 Sulfurbreath:
 "Schwefel Atem",
@@ -238,13 +252,13 @@ Cloud_of_Smoke:
 "Rauchwolke",
 
 Piercing_Wind:
-"Beißender Wind",
+"BeiÃŸender Wind",
 
 Hurricane:
 "Hurrikan",
 
 Tailwind:
-"Rückenwind",
+"RÃ¼ckenwind",
 
 Winter_Gale:
 "Orkan",
@@ -292,19 +306,19 @@ Mutation:
 "Mutation",
 
 Fluidification:
-"Verflüssigen",
+"VerflÃ¼ssigen",
 
 Allaying_Waves:
 "Lindernde Wogen",
 
 Raging_Torrent:
-"Reißende Flut",
+"ReiÃŸende Flut",
 
 Tsunami:
 "Tsunami",
 
 Overwhelming_Force:
-"Unbändige Kraft",
+"UnbÃ¤ndige Kraft",
 
 Tide:
 "Gezeit",
@@ -334,7 +348,7 @@ Lightning_of_Thor:
 "Thors Blitze",
 
 Overload:
-"Überladung",
+"Ãœberladung",
 
 Nuclear_Fusion:
 "Kernfusion",
@@ -345,8 +359,8 @@ Lightning_Bolt:
 Shockwave:
 "Schockwelle",
 
-Mjölnir:
-"Mjölnir",
+MjÃ¶lnir:
+"MjÃ¶lnir",
 
 Shape_of_Ymir:
 "Ymirs Form",
@@ -370,5 +384,5 @@ Confusion:
 "Verwirrung!",
 
 Buff:
-"Verstärkt!",
+"VerstÃ¤rkt!",
 }
