--- a/Assets/Resources/Localization/strings-en.txt
+++ b/Assets/Resources/Localization/strings-en.txt
@@ -12,7 +12,12 @@
 	decline:			"Decline",
 	
 	default_name:		"Username",
+
+	retry:				"Retry",
 	
+lost_connection_title:
+"Connection lost.",
+
 end_fight_text:
 "Fight finished",
 
